Took a detour from guides because BRAINWAVE. - Managed to fix my layout issue in my other repo (odin-etch-a-sketch) within the template folders. - Will now be deleting and redoing my odin-etch-a-sketch

--- a/Template (DUPLICATE BEFORE EDITING)/index.css
+++ b/Template (DUPLICATE BEFORE EDITING)/index.css
@@ -1,3 +1,20 @@
-#testH1 {
-    color: red;
+#container {
+    border: 1px solid black;
+    width: 1000px;
+    height: 1000px;
+    display: flex;
 }
+
+.row {
+    display: flex;
+    flex-direction: column;
+}
+
+.col {
+    border: 1px solid red;
+} 
+
+.row, .col {
+    flex-grow: 1;
+}
+
